# telethon2strsession

./: .gitignore  README.md  database.py  main.py  pyproject.toml
